# pants-example

./: .gitattributes  .gitignore  Makefile  README.md  pants.toml
py-pants/hello_name/: BUILD  hello_name_test.py
py-pants/hello_world/: BUILD  hello_world.py  hello_world_test.py
py-poetry/hello_name/: pyproject.toml
py-poetry/hello_name/hello_name/: hello_name.py
py-poetry/hello_world/: pyproject.toml
py/hello_world/: BUILD  hello_world.py  hello_world_test.py
