[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = ""
authors = ["Gavin Noronha <gavinln@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
hello-name = {path = "../hello_name"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
